Get 1 customer and delete work
